[project]
name = "ha-andrews_arnold_quota"
version = "0.0.0"
description = "HA-Andrews-Arnold-Quota"
authors = [{ email = "Andrew Jackson <andrew@codechimp.org>" }]
maintainers = [{ email = "Andrew Jackson <andrew@codechimp.org>" }]

readme = "README.md"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
requires-python = "==3.13.2"
dependencies = [] # Use dev for all dependencies

[project.urls]
documentation = "https://github.com/andrew-codechimp/HA-Andrews-Arnold-Quota"
homepage = "https://github.com/andrew-codechimp/HA-Andrews-Arnold-Quota"
repository = "https://github.com/andrew-codechimp/HA-Andrews-Arnold-Quota"
"Bug Tracker" = "https://github.com/andrew-codechimp/HA-Andrews-Arnold-Quota/issues"
Changelog = "https://github.com/andrew-codechimp/HA-Andrews-Arnold-Quota/releases"

[dependency-groups]
dev = [
    "colorlog",
    "homeassistant==2025.10.0",
    "mypy",
    "pycares<5.0.2",
    "pygments",
    "pytest-homeassistant-custom-component",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]
prerelease = "allow"
[tool.ruff]
target-version = "py313"
src = ["custom_components/andrews_arnold_quota", "tests"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Annotation and type hint rules
  "ANN401", # Disallowing dynamically typed expressions (too strict)

  # Docstring convention conflicts
  "D202", # No blank lines allowed after function docstring
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D404", # First word of the docstring should not be "This"
  "D406", # Section name should end with a newline
  "D407", # Section name underlining
  "D411", # Missing blank line before section

  # Style/tidiness adjustments
  "TID252", # Relative imports
  "E731",   # Do not assign a lambda expression, use a def

  # Formatting conflicts (black/ruff fmt)
  "COM812",
  "COM819",
  "D206",
  "E501",   # Line too long (handled by formatter)
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
  "RUF012", # Broken rule in some cases

  # Project preference
  "ARG001",  # Unused arguments
  "FBT001",  # Boolean parameters
  "FBT002",  # Boolean default valie
  "EM101",   # Exception must not use a string literal
  "ERA001",  # Found commented-out code
  "RUF001", # String contains ambiguous character
  "S101",   # Use of assert detected
  "TC001",  # Move application import into type checking
  "TC002",  # Third party import type checking
  "TC003",   # Move standard library import into a type-checking block
  "TC006",   # Add quotes to type expression in typing.cast()
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY400",  # Use `logging.exception` instead of `logging.error`
  "PLR2004", # Magic value used in comparison

  # Todo
  "ANN001", # Missing type annotation
  "ANN201", # Missing return type annotation
  "ANN202", # Missing return type
  "D202",  # No blank lines allowed after function docstring
  "D203",  # 1 blank line required before class docstring
  "D213",  # Multi-line docstring summary should start at the second line
  "D404",  # First word of the docstring should not be This
  "D406",  # Section name should end with a newline
  "D407",  # Section name underlining
  "D411",  # Missing blank line before section
  "E501",  # line too long
  "E731",  # do not assign a lambda expression, use a def
  "PTH123", # Replace open with Path.open
  "TRY301", # Abstract raise to an inner function
]


[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.isort]
length-sort = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
known-first-party = ["homeassistant"]
combine-as-imports = true

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = "3.13"
platform = "linux"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Files to check
files = ["custom_components/andrews_arnold_quota"]

# Exclude patterns
exclude = [
    "^config/",
    "^scripts/",
]
